tests/integration/snapshots/integration__conformance__n_number_invalid-utf-8-in-bigger-int.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
<raw bytes>
[91, 49, 50, 51, 229, 93]
stdout --- 
<empty>
stderr --- 
error: source did not contain valid utf8
 --> stdin
  |
