tests/integration/snapshots/integration__conformance__n_number_invalid-utf-8-in-exponent.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 49, 101, 49, 229, 93]
stdout ---

stderr ---
error: expected a continuation byte, found 0x5D
 --> stdin:1:5
  |
1 | [1e1�]
  |     ^
