tests/integration/snapshots/integration__conformance__n_number_invalid-utf-8-in-exponent.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
raw bytes: [91, 49, 101, 49, 229, 93]
stderr ---
error: source did not contain valid utf8
 --> stdin
  |
