tests/integration/snapshots/integration__conformance__n_number_invalid-utf-8-in-int.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 48, 229, 93, 10]
stdout ---

stderr ---
error: expected a continuation byte, found 0x5D
 --> stdin:1:3
  |
1 | [0�]
  |   ^
