tests/integration/snapshots/integration__conformance__n_number_invalid-utf-8-in-int.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
raw bytes: [91, 48, 229, 93, 10]
stderr ---
error: source did not contain valid utf8
 --> stdin
  |
