tests/integration/snapshots/integration__conformance__n_number_minus_infinity.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[-Infinity]
stdout ---

stderr ---
error: expected digit following minus sign, found `I`
 --> stdin:1:2
  |
1 | [-Infinity]
  |  ^
  |  |
  |  minus sign found here
