tests/integration/snapshots/integration__conformance__n_number_minus_space_1.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[- 1]
stdout ---

stderr ---
error: expected digit following minus sign, found ` `
 --> stdin:1:2
  |
1 | [- 1]
  |  ^
  |  |
  |  minus sign found here
