tests/integration/snapshots/integration__conformance__n_number_neg_int_starting_with_zero.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[-012]
stdout ---

stderr ---
error: unexpected leading zero
 --> stdin:1:2
  |
1 | [-012]
  |  ^-
  |   |
  |   first zero found here
  |
help: remove the leading zeros
  |
1 - [-012]
1 + [-12]
  |
